fix header width on mobile, readme

--- a/src/scss/helpers/mixins/page-width-media.scss
+++ b/src/scss/helpers/mixins/page-width-media.scss
@@ -1,6 +1,5 @@
 @mixin page-width-media() {
   margin: 0 auto;
-  padding: 0 15px;
 
   @media (min-width: $break-tablet) {
     width: 720px;
